--- a/index.html
+++ b/index.html
@@ -1,1 +1,199 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quennie Joy Almazan - Portfolio</title>
+    <style>
+        /* Basic CSS styling */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f7f9fc;
+            color: #333;
+        }
+
+        /* Header Section */
+        .header {
+            background: linear-gradient(135deg, #a02681, #6c63ff);
+            color: white;
+            padding: 6rem 2rem;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .header img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 5px solid #fff;
+            position: absolute;
+            top: 5rem;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .header h1 {
+            margin: 1rem 0;
+            font-size: 3.5rem;
+        }
+
+        .header h2 {
+            font-size: 2.5rem;
+            margin: 1rem 0;
+            font-weight: 400;
+        }
+
+        .header p {
+            font-size: 1.2rem;
+            margin: 0;
+        }
+
+        /* Navigation */
+        nav {
+            background-color: #333;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul li {
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 1rem 1.5rem;
+            border-radius: 20px;
+            background: linear-gradient(135deg, #333, #444);
+            transition: background 0.5s, transform 0.5s;
+        }
+
+        nav ul li a:hover {
+            background: linear-gradient(135deg, #6c63ff, #a02681);
+            transform: scale(1.1);
+            color: #fff;
+        }
+
+        /* Boxed Section Styling */
+        .section-box {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 2rem;
+            margin: 2rem auto;
+            max-width: 800px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .section-box:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        .section-box h2 {
+            color: #333;
+            font-size: 2.5rem;
+            border-bottom: 2px solid #6c63ff;
+            padding-bottom: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+
+        /* Responsive Styles */
+        @media (max-width: 600px) {
+            .header h1 {
+                font-size: 2.5rem;
+            }
+
+            .header h2 {
+                font-size: 2rem;
+            }
+
+            .section-box {
+                padding: 1.5rem;
+            }
+
+            .section-box h2 {
+                font-size: 2rem;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Header Section with Image -->
+    <div class="header">
+        <img src="img.jpg" alt="Your Picture">
+        <h2>Hello, it's me</h2>
+        <h1>Quennie Joy Almazan</h1>
+        <p>IT Student | Web Developer | Arduino Enthusiast</p>
+    </div>
+
+    <!-- Navigation Menu -->
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Boxed About Me Section -->
+    <section id="about" class="section-box">
+        <h2>About Me</h2>
+        <p>Hi, I'm Quennie Joy Almazan, a 20-year-old IT student from Masaya Bay, Laguna. I’m passionate about technology, web development, and working on exciting projects like flood detection systems to make a positive impact.</p>
+    </section>
+
+    <!-- Boxed Projects Section -->
+    <section id="projects" class="section-box">
+        <h2>Projects</h2>
+        <ul>
+            <li>Flood Detector and Notification System</li>
+        </ul>
+    </section>
+
+    <!-- Boxed Skills Section -->
+    <section id="skills" class="section-box">
+        <h2>Skills</h2> 
+        <ul>
+            <li>HTML & CSS - <span class="stars">★★★★☆</span></li>
+            <li>Arduino Programming - <span class="stars">★★★☆☆</span></li>
+            <li>Web Development - <span class="stars">★★★★☆</span></li>
+        </ul>
+    </section>
+
+    <!-- Boxed Contact Section -->
+    <section id="contact" class="section-box">
+        <h2>Contact</h2>
+        <p>You can reach me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Quennie Joy Almazan</p>
+    </footer>
+
+</body>
+</html>
 
